# rust-tcp-ingestion

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spam_logs.py
src/: main.rs
