[package]
name = "rust_tcp_ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"